[package]
name = "pulsar-cat"
version = "0.1.0"
edition = "2024"

[dependencies]
pulsar = "6.3.1"
clap = { version = "4", features = ["cargo", "derive", "env"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1.44", features = ["rt", "macros", "rt-multi-thread", "signal"] }
flate2 = "1.0"
futures = "0.3"
